--- a/artist-page.html
+++ b/artist-page.html
@@ -155,7 +155,7 @@
             </p>
           </div>
         </div>
-        <div class="container col-10 mr-0" id="playlist-container">
+        <div class="container col-10 mr-0 pl-0" id="playlist-container">
           <div class="row d-flex justify-content-start">
             <div
               class="pauseButton mr-3 rounded-circle text-white d-flex justify-content-center align-items-center"
@@ -181,7 +181,7 @@
                 <h2 class="col-10 mx-0 px-0">Popular</h2>
                 <h2 class="col-2 mx-0 px-0">Artist Pick</h2>
               </div>
-              <div class="col-12 d-flex" id="playlist-column">
+              <div class="col-12 d-flex pl-0" id="playlist-column">
                 <ul class="list-group col-10 pb-0" id="playlist-list">
                   <li class="list-group-item d-flex pb-0">
                     <p class="col-md-1">1</p>
