--- a/login.html
+++ b/login.html
@@ -38,10 +38,10 @@
         <div class="line"><strong>OR</strong></div>
         <!-- Login field -->
         <div id="error"></div>
-        <form action="\" method="get">
+        <form action="" method="get">
         <div class="login">
-            <input type="text" required autocomplete="username" placeholder="Email address or username" id="username" value="Alex">
-            <input type="password" required minlength="6" maxlength="20" autocomplete="current-password" placeholder="Password" id="password" value="123456">
+            <input type="text" required autocomplete="username" placeholder="Email address or username" id="username">
+            <input type="password" required minlength="6" maxlength="20" autocomplete="current-password" placeholder="Password" id="password">
         </div>
         <div class="getIn">
             <div class="remember-user">
