--- a/login.html
+++ b/login.html
@@ -40,8 +40,8 @@
         <div id="error"></div>
         <form action="" method="get">
         <div class="login">
-            <input type="text" required autocomplete="username" placeholder="Email address or username" id="username">
-            <input type="password" required minlength="6" maxlength="20" autocomplete="current-password" placeholder="Password" id="password">
+            <input type="text" autocomplete="username" placeholder="Email address or username" id="username">
+            <input type="password" minlength="6" maxlength="20" autocomplete="current-password" placeholder="Password" id="password">
         </div>
         <div class="getIn">
             <div class="remember-user">
