--- a/artist.html
+++ b/artist.html
@@ -82,9 +82,9 @@
             </li>
           </ul>
           <hr style="border: solid 0.5px rgba(128, 128, 128, 0.43)" />
-          <ul id="nav-3" class="nav flex-column">
+          <ul id="navScroll" class="">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Funky Heavy Bluesy</a>
+              <a class="nav-link" href="#">Funky Heavy Bluesy</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Your Top Songs 2020</a>
@@ -96,7 +96,7 @@
               <a class="nav-link" href="#">This is Rod Stewart</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">FRANCHISE ft.Young Thug...</a>
+              <a class="nav-link" href="#">FRANCHISE ft.Young Thug...</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Your Top Songs 2019</a>
@@ -108,7 +108,7 @@
               <a class="nav-link" href="#">This is Joe Bonamassa</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Jun19</a>
+              <a class="nav-link" href="#">Jun19</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Jack 30th Party 2</a>
@@ -120,7 +120,7 @@
               <a class="nav-link" href="#">This is Opeth</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Metal Ballads</a>
+              <a class="nav-link" href="#">Metal Ballads</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">New Playlist</a>
@@ -150,10 +150,7 @@
               alt=""
               id="main-image"
             />
-            <div
-              class="container d-flex flex-column align-items-start justify-content-end pl-0"
-              id="text-container"
-            >
+            <div class="ml-5" id="text-container">
               <div class="d-flex mr-0 pr-0">
                 <i class="bi bi-patch-check-fill" id="verified-btn"></i>
                 <p class="lead">Verified artist</p>
@@ -167,10 +164,10 @@
           <!-- Playlist  -->
           <div class="row">
             <div class="col-12 mr-0 pl-0" id="playlist-container">
-              <div class="row d-flex justify-content-start">
+              <div class="row d-flex">
                 <div
                   id="change-button"
-                  class="pauseButton mr-3 rounded-circle text-white d-flex justify-content-center align-items-center"
+                  class="pauseButton mr-3 ml-5 rounded-circle text-white d-flex align-items-center"
                 >
                   <i
                     onclick="buttonChange()"
@@ -186,26 +183,29 @@
                 >
                   Follow
                 </p>
-                <p class="d-inline" style="margin-block: auto" id="dots">...</p>
+                <p class="d-inline" style="margin-block: auto" id="dots">
+                  <i class="bi bi-three-dots"></i>
+                </p>
               </div>
-              <div class="container mt-5" id="playlist">
-                <div class="row" id="playlist-row">
-                  <div class="col-12 d-flex mb-2">
+              <div class="col-10" id="playlist-row">
+                <div class="row mt-5 ml-3" id="playlist">
+                  <div class="col-12 d-flex mb-4">
                     <h2 class="col-sm-12 col-md-12 col-l-10 mx-0 px-0">
                       Popular
                     </h2>
-                    <h2 class="col-2 mx-0 px-0" id="tag-pick">Artist Pick</h2>
+                    <h2 class="col-2 px-0" id="tag-pick">Artist Pick</h2>
                   </div>
                   <div class="col-12 d-flex pl-0" id="playlist-column">
                     <ul
                       class="list-group col-sm-12 col-md-12 col-l-10 pb-0"
                       id="playlist-list"
                     >
-                      <li class="list-group-item d-flex pb-0 play-song">
+                      <li
+                        class="list-group-item align-items-center justify-content-between pl-0 d-flex pb-0 play-song"
+                      >
                         <p class="col-md-1">1</p>
                         <img
                           class="col-md-2 album-list-cover band-pic"
-                          id="test-band-pic"
                           src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
                           alt=""
                         />
@@ -220,7 +220,9 @@
                         </p>
                         <p class="col-md-3 duration" id="test-duration">3:34</p>
                       </li>
-                      <li class="list-group-item d-flex pb-0 play-song">
+                      <li
+                        class="list-group-item align-items-center justify-content-between pl-0 d-flex pb-0 play-song"
+                      >
                         <p class="col-md-1">2</p>
                         <img
                           class="col-md-2 album-list-cover band-pic"
@@ -233,7 +235,9 @@
                         <p class="col-md-3 rank">1,497,986,258</p>
                         <p class="col-md-3 duration">5:54</p>
                       </li>
-                      <li class="list-group-item d-flex pb-0 play-song">
+                      <li
+                        class="list-group-item align-items-center justify-content-between pl-0 d-flex pb-0 play-song"
+                      >
                         <p class="col-md-1">3</p>
                         <img
                           class="col-md-2 album-list-cover band-pic"
@@ -246,7 +250,9 @@
                         <p class="col-md-3 rank">1,063,959,983</p>
                         <p class="col-md-3 duration">3:29</p>
                       </li>
-                      <li class="list-group-item d-flex pb-0 play-song">
+                      <li
+                        class="list-group-item align-items-center justify-content-between pl-0 d-flex pb-0 play-song"
+                      >
                         <p class="col-md-1">4</p>
                         <img
                           class="col-md-2 album-list-cover band-pic"
@@ -259,7 +265,9 @@
                         <p class="col-md-3 rank">900,225,026</p>
                         <p class="col-md-3 duration">4:08</p>
                       </li>
-                      <li class="list-group-item d-flex pb-0 play-song">
+                      <li
+                        class="list-group-item align-items-center justify-content-between pl-0 d-flex pb-0 play-song"
+                      >
                         <p class="col-md-1">5</p>
                         <img
                           class="col-md-2 album-list-cover band-pic"
@@ -278,7 +286,7 @@
                       class="list-group col-2 pb-0"
                       id="playlist-current-track"
                     >
-                      <li class="list-group-item" id="artist-pick">
+                      <li class="list-group-item pl-0" id="artist-pick">
                         <img
                           class="current-track"
                           src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
